# database

./: .gitignore  LICENSE  README.md  obdb_build_target_list.sh  using_data.md
doc/: using_data.md
manager/: README.md  pyproject.toml
manager/manager/: compile_dtcs_database.py  compile_dtcs_json.py  converter.py  converter_to_sqlite.py  converter_to_yaml.py  dtc.py  main.py  vehicle.py  vpic_sqlite_loader.py
manager/manager/tab/: browser.py  configure.py  generate.py  import_dtc.py  import_tab.py  import_vehicle.py  query.py  stats.py
manager/manager/tab/widget/: mod_dtc_panel.py
manager/manager/tk/: Tab.py  tk.py
manager_new/: README.md  pyproject.toml
manager_new/ad_db_manager/: app.py  log.py  main.py  schema.py  storage.py
manager_new/ad_db_manager/static/: app.js
manager_new/ad_db_manager/templates/: index.html
samples/: codes.csv  (+1 more)
scripts/VIN/: README.md  decoder.py  decoder_data.py  decoder_test.py  pyproject.toml
scripts/VIN/ISO3779/: decoder.py  decoder_data.py  decoder_test.py
scripts/VIN/ISO3779/decoder_modules/: citroen.py  module.py  none.py  renault.py  toyota.py
scripts/VIN/decoder_modules/: module.py  peugeot.py  renault.py  subaru.py  toyota.py
scripts/VIN/vindecoder/: decoder.py  decoder_data.py
scripts/VIN/vindecoder/data/: manufacturers.tsv
scripts/VIN/vindecoder/data/manufacturer_specific/alpha_romeo/: brand.tsv  plant.tsv
scripts/VIN/vindecoder/data/manufacturer_specific/chrysler/: brand.tsv  plant.tsv
scripts/VIN/vindecoder/data/manufacturer_specific/citroen/: outline.tsv  version.tsv
scripts/VIN/vindecoder/data/manufacturer_specific/renault/: body.tsv  plant.tsv
scripts/VIN/vindecoder/decoder_modules/: alpha_romeo.py  chrysler.py  citroen.py  module.py  none.py  peugeot.py  renault.py  subaru.py  toyota.py
scripts/VIN/vindecoder/tests/: decoder_test.py  test_decoder.py
(+86971 files in other folders)
