[tool.poetry]
name = "vindecoder"
version = "0.0.0"
description = "VIN decoder"
authors = ["ffprivacy <ffprivacy@netcourrier.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
vindecoder_cli = 'vindecoder.decoder:main'

[tool.pytest.ini_options]
testpaths = [
    "tests"
]